Major works on css to beutify the site.

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,17 +6,19 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kolorowe Przedszkole</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app" class="row"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
 
 <style scoped>
-  #app {
+  /* #app {
     background-color: 0;
     border: 0px;
     border-radius: 0px;
@@ -24,5 +26,5 @@
     margin: 0px;
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
     text-align: center;
-  }
+  } */
 </style>
